# remote-desktop-app

./: .gitignore  README.md  development-flow.md  logs.txt  test  test.cpp  test_run.sh
engine/: CMakeLists.txt  CMakePresets.json
engine/src/: CoreEngine.cpp  CoreEngine.hpp  CoreEngine.mm  api.cpp  api.hpp  main.cpp
engine/src/capturers/: LinuxCapturer.cpp  LinuxCapturer.hpp  ScreenCapturer.hpp
engine/src/capturers/linux/: PipeWireClient.cpp  PipeWireClient.hpp  ScreencastPortal.cpp  ScreencastPortal.hpp
engine/src/client/: ClientApp.cpp  ClientApp.hpp  ClientWebRtcManager.cpp  ClientWebRtcManager.hpp  H264Decoder.cpp  H264Decoder.hpp  Renderer.cpp  Renderer.hpp  main.cpp
engine/src/client/decoders/: BaseDecoder.hpp  DecoderFactory.cpp  DecoderFactory.hpp  IntelIrisDecoder.cpp  IntelIrisDecoder.hpp  SoftwareDecoder.cpp  SoftwareDecoder.hpp
engine/src/client/decoders/apple/: AppleDecoder.hpp
engine/src/client/decoders/intel/: IntelIrisDecoder.cpp  IntelIrisDecoder.hpp
engine/src/client/decoders/nvidia/: CudaDecoder.cpp  CudaDecoder.hpp
engine/src/client/decoders/software/: SoftwareDecoder.cpp  SoftwareDecoder.hpp
engine/src/client/network/: ClientWebRtcManager.cpp  ClientWebRtcManager.hpp
engine/src/configurers/: CoreEngineConfigurer.cpp  CoreEngineConfigurer.hpp  MediaEngineConfigurer.cpp  MediaEngineConfigurer.hpp
engine/src/encoders/: BaseEncoder.cpp  BaseEncoder.hpp  H264Encoder.cpp  H264Encoder.hpp
engine/src/encoders/intel/: IntelIrisEncoder.cpp  IntelIrisEncoder.hpp
engine/src/encoders/nvidia/: CudaEncoder.cpp  CudaEncoder.hpp
engine/src/network/: WebRtcManager.cpp  WebRtcManager.hpp
engine/src/utils/: PlatformUtils.hpp
engine/src/utils/linux/: OpenGlUtils.hpp  PlatformUtils.cpp
engine/src/utils/mac/: PlatformUtils.mm
signaling-server/: main.py  pyproject.toml
ui/: next.config.ts  package-lock.json  package.json
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/binaries/: core-engine-x86_64-unknown-linux-gnu
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/app/: page.tsx
